--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 </head>
 <body>
     <div class="container text-center p-3">
+
+        <!--    
         <form action="api.php" method="POST">
             <input class="form-control mb-3" type="number" name="valor"
             min="0" max="9"
             placeholder="Numero del Planeta" required>
+            <input
+            class="btn btn-info" type="submit" value="Enviar">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input class="form-control mb-3" type="number" name="valor"
+            min="0" placeholder="Cantidad de Planetas" required>
             <input
             class="btn btn-info" type="submit" value="Enviar">
         </form>
