feat: :sparkles: Se agregó el punto 3
Se agregó el punto 3 al código

--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
         </form>
         -->
 
+        <!-- 
         <form action="api.php" method="POST">
             <input class="form-control mb-3" type="number" name="valor"
             min="0" placeholder="Cantidad de Planetas" required>
             <input
             class="btn btn-info" type="submit" value="Enviar">
         </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit" value="¿Cuales son habitables?">
+        </form>
+
     </div>
     
 </body>
