feat: :sparkles: Se agregó punto 4
Se agregó el punto 4 al código

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
         </form>
         -->
 
+        <!-- 
         <form action="api.php" method="POST">
             <input
             class="btn btn-info" type="submit" value="¿Cuales son habitables?">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit"value="Comparación gravedad">
         </form>
 
     </div>
