feat: :sparkles: Se agregó el punto 5
Se agregó el punto 5 al código

--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
         </form>
         -->
 
+        <!--   
         <form action="api.php" method="POST">
             <input
             class="btn btn-info" type="submit"value="Comparación gravedad">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit"value="Masa total de naves">
         </form>
 
     </div>
