feat: :sparkles: Se agregó el punto 6
Se agregó el punto 6 a el código

--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
         </form>
         -->
 
+        <!-- 
         <form action="api.php" method="POST">
             <input
             class="btn btn-info" type="submit"value="Masa total de naves">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input class="form-control mb-3" type="text" name="planeta"
+            placeholder="Nombre del Planeta" required>
+            <input
+            class="btn btn-info" type="submit" value="Enviar">
         </form>
 
     </div>
