--- a/index.html
+++ b/index.html
@@ -51,9 +51,18 @@
         </form>
         -->
 
+        <!--
         <form action="api.php" method="POST">
             <input class="form-control mb-3" type="text" name="planeta"
             placeholder="Nombre del Planeta" required>
+            <input
+            class="btn btn-info" type="submit" value="Enviar">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input class="form-control mb-3" type="text" name="nave"
+            placeholder="Tipo de nave" required>
             <input
             class="btn btn-info" type="submit" value="Enviar">
         </form>
