feat: :sparkles: Se agregó el punto 8
Se agregó el punto 8 a el código

--- a/index.html
+++ b/index.html
@@ -60,11 +60,18 @@
         </form>
         -->
 
+        <!--
         <form action="api.php" method="POST">
             <input class="form-control mb-3" type="text" name="nave"
             placeholder="Tipo de nave" required>
             <input
             class="btn btn-info" type="submit" value="Enviar">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit"value="Masa total de naves">
         </form>
 
     </div>
