feat: :sparkles: Se agregó el punto 9
Se agregó el punto 9 a el código

--- a/index.html
+++ b/index.html
@@ -69,9 +69,16 @@
         </form>
         -->
 
+        <!--
         <form action="api.php" method="POST">
             <input
-            class="btn btn-info" type="submit"value="Masa total de naves">
+            class="btn btn-info" type="submit"value="Planeta a explorar">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit"value="Tipos de alienigenas">
         </form>
 
     </div>
