feat: :sparkles: Se agregó el punto 10
Se agregó el punto 10 a el código

--- a/index.html
+++ b/index.html
@@ -76,9 +76,16 @@
         </form>
         -->
 
+        <!--
         <form action="api.php" method="POST">
             <input
             class="btn btn-info" type="submit"value="Tipos de alienigenas">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit"value="Planetas en ambos sistemas solares">
         </form>
 
     </div>
