--- a/index.html
+++ b/index.html
@@ -90,9 +90,18 @@
         </form>
         -->
 
+        <!--
         <form action="api.php" method="POST">
             <input
             class="btn btn-info" type="submit"value="Planetas únicos en ambos sistemas solares">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input class="form-control mb-3" type="text" name="satelites"
+            placeholder="Planeta del sistema solar" required>
+            <input
+            class="btn btn-info" type="submit" value="Enviar">
         </form>
 
     </div>
