feat: :sparkles: Se agregó el punto 13
Se agregó el punto 13 a el código

--- a/index.html
+++ b/index.html
@@ -97,11 +97,18 @@
         </form>
         -->
 
+        <!--
         <form action="api.php" method="POST">
             <input class="form-control mb-3" type="text" name="satelites"
             placeholder="Planeta del sistema solar" required>
             <input
             class="btn btn-info" type="submit" value="Enviar">
+        </form>
+        -->
+
+        <form action="api.php" method="POST">
+            <input
+            class="btn btn-info" type="submit"value="Planetas en orden invertido">
         </form>
 
     </div>
